deploy/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:                           # 元数据 ，包含deployment的名称和标签。
  name: backend
  labels:
    app: backend                     #  用于匹配selector中的标签
spec:                                #  用于定义deployment的规范
  replicas: 1
  selector:                          # 用于选择要关联到deployment的Pod
    matchLabels:
      app: backend
  template:                          # 定义要创建的Pod 模版
    metadata:
      labels:                        # 定义Pod 的标签
        app: backend                 # pod label字段 -与service中的 selector app 值一致（service 与对应pod的关联字段）
    spec:                            # 定义Pod 的规范
      containers:                    # 定义pod中的容器列表
      - name: flask-backend
        image: lyzhang1999/backend:latest
        imagePullPolicy: Always               # 镜像拉取策略：always最新版本
        ports:
        - containerPort: 5000
        env:                               # 设置容器的环境变量（键值对），这里设置了容器内的应用程序连接数据库的环境变量（数据库的url，访问数据库的用户名和密码等）
        - name: DATABASE_URI
          value: pg-service                # 数据库的连接地址，因数据库和服务后端在同一命名空间下，故通过服务名称即可访问，全称是 pg-service.example.svc.cluster.local
        - name: DATABASE_USERNAME
          value: postgres
        - name: DATABASE_PASSWORD
          value: postgres
        resources:                       # 
          requests:                      # 容器运行时对计算资源的最小要求量
            memory: "128Mi"              # 最小内存要求量，128Mi =128兆，1Gi =1024兆
            cpu:  "128m"                 # 最小CPU要求量，1000m=1核，500m =0.5核 ，在K8S中 ，m：不是将完整的CPU以锁定的方式配给pod，它计算的是时间片。m是CPU的调度方法，m 数字越高，被分配到的CPU的时间片越多，反之越少。
          limits:                        # 容器运行时，所能使用的最大资源量
            memory: "256Mi"
            cpu: "256m"
        readinessProbe:                   # 就绪探针定义（就绪表示可以接受外部流量了）。探针用于检测容器（内部应用程序）的健康情况。k8s在指定的容器内部发送httpget请求到指定路径和端口，在指定时间内，返回200-399状态码时，视为本次探针成功
          httpGet:                        # 探针中配置：使用http get发送请求到路径/healthy，端口号5000
            path: /healthy
            port: 5000
            scheme: HTTP
          initialDelaySeconds: 10         # 探测器在容器启动后的等待时间，避免误探测
          failureThreshold: 5             # 失败阈值，即探测到连续失败次数>=5，则k8s认为探测是失败的。 即容器还没有就绪
          periodSeconds: 10               # 2次探测容器的时间间隔 （如果容器每个周期间隔内都成功响应探测请求，k8s认为容器是健康的）根据应用的特性和需求，设置合适的探测间隔时间，可平衡检测容器的频率和系统资源利用的平衡。
          successThreshold: 1             # 成功阈值
          timeoutSeconds: 1               # 超时收到容器响应的时间，大于此时间，认为容器出了问题或响应太慢-本次探测是失败
        livenessProbe:                    # 存活探针定义 ，当发现pod不健康会直接重启。
          httpGet:
            path: /healthy
            port: 5000
            scheme: HTTP
          failureThreshold: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        startupProbe:                     # 启动探针定义，用于启动慢的业务
          httpGet:
            path: /healthy
            port: 5000
            scheme: HTTP
          initialDelaySeconds: 10
          failureThreshold: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
